<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/maven-v4_0_0.xsd">
  <artifactId>ffx-ui</artifactId>
  <build>
    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>appassembler-maven-plugin</artifactId>
        <version>${appassembler.version}</version>
        <configuration>
          <!-- Set the target configuration directory to be used in the bin scripts -->
          <configurationDirectory>conf</configurationDirectory>
          <!-- Extra JVM arguments that will be included in the bin scripts -->
          <extraJvmArguments>-Xms1G -Xmx8G</extraJvmArguments>
          <!-- Generate bin scripts for windows and unix -->
          <platforms>
            <platform>windows</platform>
            <platform>unix</platform>
          </platforms>
          <programs>
            <program>
              <id>ffx</id>
              <mainClass>ffx.Main</mainClass>
            </program>
            <program>
              <id>ffxc</id>
              <mainClass>ffx.Main</mainClass>
            </program>
            <program>
              <id>scheduler</id>
              <mainClass>ffx.Main</mainClass>
            </program>
          </programs>
        </configuration>
      </plugin>
      <plugin>
        <!-- Copy UI jar to the lib directory. -->
        <artifactId>maven-resources-plugin</artifactId>
        <executions>
          <execution>
            <configuration>
              <outputDirectory>${project.basedir}/../../lib</outputDirectory>
              <overwrite>true</overwrite>
              <resources>
                <resource>
                  <directory>target</directory>
                  <includes>
                    <include>ffx-ui-${project.version}.jar</include>
                  </includes>
                </resource>
              </resources>
            </configuration>
            <goals>
              <goal>copy-resources</goal>
            </goals>
            <id>copy-ffx-ui-jar</id>
            <phase>install</phase>
          </execution>
        </executions>
        <version>${resources.version}</version>
      </plugin>
      <plugin>
        <groupId>org.codehaus.gmavenplus</groupId>
        <artifactId>gmavenplus-plugin</artifactId>
        <version>${gmavenplus.version}</version>
        <executions>
          <execution>
            <phase>install</phase>
            <goals>
              <goal>execute</goal>
            </goals>
            <configuration>
              <scripts>
                <script>${basedir}/src/resources/KotlinFFXJson.groovy</script>
              </scripts>
            </configuration>
          </execution>
        </executions>
        <dependencies>
          <dependency>
            <groupId>org.apache.groovy</groupId>
            <artifactId>groovy-all</artifactId>
            <version>4.0.15</version>
            <type>pom</type>
            <scope>compile</scope>
          </dependency>
        </dependencies>
      </plugin>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <configuration>
                <source>16</source>
                <target>16</target>
            </configuration>
        </plugin>
    </plugins>
    <resources>
      <resource>
        <directory>${basedir}/src/main/java/ffx/ui/commands
        </directory>
        <includes>
          <include>*.xml</include>
          <include>*.dtd</include>
        </includes>
        <targetPath>ffx/ui/commands</targetPath>
      </resource>
      <resource>
        <directory>${basedir}/src/main/java/ffx/ui/properties
        </directory>
        <includes>
          <include>*.*</include>
        </includes>
        <targetPath>ffx/ui/properties</targetPath>
      </resource>
      <resource>
        <directory>${basedir}/src/main/java/ffx/ui/icons
        </directory>
        <includes>
          <include>*.png</include>
          <include>*.gif</include>
        </includes>
        <targetPath>ffx/ui/icons</targetPath>
      </resource>
    </resources>
  </build>
  <dependencies>
    <dependency>
      <groupId>org.graalvm.polyglot</groupId>
      <artifactId>polyglot</artifactId>
      <version>23.1.0</version>
    </dependency>
    <dependency>
      <groupId>org.graalvm.polyglot</groupId>
      <artifactId>python</artifactId>
      <version>23.1.0</version>
      <scope>runtime</scope>
      <type>pom</type>
    </dependency>
    <dependency>
      <groupId>org.jogamp.java3d</groupId>
      <artifactId>j3dutils</artifactId>
      <version>${java3d.version}</version>
    </dependency>
    <dependency>
      <groupId>org.jogamp.java3d</groupId>
      <artifactId>vecmath</artifactId>
      <version>${java3d.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.groovy</groupId>
      <artifactId>groovy</artifactId>
      <version>${groovy-all.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-1.2-api</artifactId>
      <version>${log4j.version}</version>
    </dependency>
    <dependency>
      <artifactId>ffx-algorithms</artifactId>
      <groupId>${project.groupId}</groupId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <artifactId>ffx-pj</artifactId>
      <groupId>${project.groupId}</groupId>
      <version>${pj.version}</version>
    </dependency>
    <dependency>
      <artifactId>ffx-crystal</artifactId>
      <groupId>${project.groupId}</groupId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <artifactId>ffx-numerics</artifactId>
      <groupId>${project.groupId}</groupId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <artifactId>ffx-potential</artifactId>
      <groupId>${project.groupId}</groupId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <artifactId>ffx-refinement</artifactId>
      <groupId>${project.groupId}</groupId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <artifactId>ffx-utilities</artifactId>
      <groupId>${project.groupId}</groupId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>${commons-io.version}</version>
    </dependency>
    <dependency>
      <artifactId>commons-lang3</artifactId>
      <groupId>org.apache.commons</groupId>
      <version>${commons-lang3.version}</version>
    </dependency>
    <dependency>
      <artifactId>commons-math3</artifactId>
      <groupId>org.apache.commons</groupId>
      <version>${commons-math3.version}</version>
    </dependency>
    <dependency>
      <artifactId>commons-configuration2</artifactId>
      <groupId>org.apache.commons</groupId>
      <version>${commons-configuration2.version}</version>
      <exclusions>
        <exclusion>
          <groupId>org.apache.commons</groupId>
          <artifactId>commons-lang3</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <artifactId>j3dcore</artifactId>
      <groupId>org.jogamp.java3d</groupId>
      <version>${java3d.version}</version>
    </dependency>
    <dependency>
      <artifactId>MRJToolkitStubs</artifactId>
      <groupId>mrj</groupId>
      <version>${MRJToolkitStubs.version}</version>
    </dependency>
  </dependencies>
  <description>
    The User Interface modules implements two user interfaces for Force Field X.
    The first is a command line interface that executes scripts.
    The second is a graphical user interface that also executes scripts while providing interactive 3D
    visualization.
  </description>
  <modelVersion>4.0.0</modelVersion>
  <name>User Interfaces</name>
  <packaging>jar</packaging>
  <parent>
    <artifactId>forcefieldx</artifactId>
    <groupId>edu.uiowa.eng.ffx</groupId>
    <relativePath>../../pom.xml</relativePath>
    <version>1.0.0-beta</version>
  </parent>
</project>